# BluShare

./: README.md
.github/workflows/: build.yml
AndroidApp/: settings.gradle
AndroidApp/app/: build.gradle
AndroidApp/app/src/main/: AndroidManifest.xml
AndroidApp/app/src/main/cpp/: CMakeLists.txt  NativeBridge.cpp
AndroidApp/app/src/main/java/com/bluetoothaudio/receiver/: MainActivity.java  NativeBridge.java  StreamService.java
WindowsServer/: CMakeLists.txt
WindowsServer/Src/: AudioCapture.cpp  AudioCapture.h  BluetoothServer.cpp  BluetoothServer.h  Main.cpp  PacketQueue.h
